# Tasks

./: .gitignore
Vision_project/install/: local_setup.sh  setup.sh
Vision_project/install/bottle_detection/lib/bottle_detection/: bottle_detector
Vision_project/install/bottle_detection/share/bottle_detection/: bottle_detection_setup-hook.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Vision_project/install/conveyorbelt_msgs/share/conveyorbelt_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Vision_project/install/item_spawner/lib/item_spawner/: spawner_node
Vision_project/log/: latest_build
Vision_project/src/bottle_detection/: export_onnx.py  package.xml  setup.cfg  setup.py
Vision_project/src/bottle_detection/bottle_detection/: bottle_detector.py  detections.db  onnx_inference.py
Vision_project/src/item_spawner/: package.xml  setup.cfg  setup.py
Vision_project/src/item_spawner/item_spawner/: spawner_node.py
Vision_project/src/naviarm_bringup/: CMakeLists.txt
Vision_project/src/naviarm_bringup/launch/: naviarm_bringup.launch.py
Vision_project/src/naviarm_bringup/rviz/: naviarm.rviz
Vision_project/src/naviarm_gazebo/: CMakeLists.txt
Vision_project/src/naviarm_gazebo/launch/: gazebo.launch.py
Vision_project/src/naviarm_gazebo/worlds/: alan_warehouse.world  alan_warehouse_2.world  cafe.world  cafe_warehouse.world  seat.world  train3.world  train_final.world  w_warehouse.world
Vision_project/src/vision_box_detector/: package.xml  setup.cfg  setup.py
(+450 files in other folders)
